components/09-nautobot/base/nautobot/templates/service.yaml
---
# Source: nautobot/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nautobot-default
  namespace: "nautobot"
  labels:
    app.kubernetes.io/name: nautobot
    helm.sh/chart: nautobot-2.0.5
    app.kubernetes.io/instance: nautobot
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "2.0.5"
    app.kubernetes.io/component: nautobot-default
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 443
      targetPort: "https"
      name: "https"
    - protocol: "TCP"
      port: 80
      targetPort: "http"
      name: "http"
  selector:
    app.kubernetes.io/name: nautobot
    app.kubernetes.io/instance: nautobot
    app.kubernetes.io/component: nautobot-default
