components/09-nautobot/base/nautobot/templates/ingress.yaml
---
# Source: nautobot/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nautobot
  namespace: "nautobot"
  labels:
    app.kubernetes.io/name: nautobot
    helm.sh/chart: nautobot-2.0.5
    app.kubernetes.io/instance: nautobot
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "2.0.5"
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: "nginx"
  rules:
    - host: nautobot.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nautobot-default
                port:
                  name: https
  tls:
    - hosts:
        - nautobot.local
      secretName: nautobot-ingress-tls
